@@ -44,17 +44,15 @@ public class ESItemQueryTest {
 
     private static final ItemQuery query = new ESItemQuery();
 
-    @Test(invocationCount = 512, threadPoolSize = 2, priority = 2)
+    @Test(invocationCount = 512, threadPoolSize = 1)
     public void testFindAsync() throws InterruptedException, ExecutionException, TimeoutException {
         System.out.println("➡️ Started on thread: " + Thread.currentThread().getName());
 
         long[] ids = {51746812605656589L, 51748312021100428L, 51748057162606289L};
-
         // 使用固定线程池或虚拟线程（Java 21+）
         ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor(); // Java 21+
         // 或：Executors.newFixedThreadPool(ids.length);
-        CompletableFuture<Void>[] futures = new CompletableFuture[ids.length];
-
+        CompletableFuture[] futures = new CompletableFuture[ids.length];
         for (int i = 0; i < ids.length; i++) {
             final long id = ids[i];
             futures[i] = CompletableFuture.runAsync(() -> {
@@ -62,13 +60,10 @@ public class ESItemQueryTest {
 
                 StringBuilder result = new StringBuilder();
                 Throwable[] errorHolder = new Throwable[1];
-                boolean[] completed = {false};
 
                 // 使用 CountDownLatch 等待单个 Flux 完成
                 var latch = new java.util.concurrent.CountDownLatch(1);
-
                 Flux<ByteBuf> flux = query.findAsync(id); // 或 service.findAsynca(id)
-
                 flux.subscribe(
                         byteBuf -> {
                             try {
@@ -88,12 +83,10 @@ public class ESItemQueryTest {
                             latch.countDown();
                         },
                         () -> {
-                            completed[0] = true;
                             System.out.println("[ID=" + id + "] Completed.");
                             latch.countDown();
                         }
                 );
-
                 try {
                     boolean finished = latch.await(3, TimeUnit.SECONDS);
                     if (!finished) {
@@ -114,7 +107,6 @@ public class ESItemQueryTest {
                             "Response should be valid JSON for ID " + id);
                     Assert.assertFalse(fullOutput.contains("_meta"),
                             "Response must NOT contain '_meta' for ID " + id);
-
                 } catch (InterruptedException e) {
                     Thread.currentThread().interrupt();
                     throw new RuntimeException("Interrupted while waiting for ID " + id, e);
@@ -124,11 +116,10 @@ public class ESItemQueryTest {
 
         // 等待所有任务完成
         CompletableFuture.allOf(futures).get(3, TimeUnit.SECONDS);
-
         executor.shutdownNow();
     }
 
-    @Test(invocationCount = 512, threadPoolSize = 5, priority = 2)
+    @Test(invocationCount = 512, threadPoolSize = 2)
     public void testFind() throws IOException {
         System.out.println("➡️ Started on thread: " + Thread.currentThread().getName());
         try (InputStream is = query.find(51746812605656589L)) {
@@ -142,20 +133,19 @@ public class ESItemQueryTest {
         }
     }
 
-    @Test(invocationCount = 512, threadPoolSize = 6, priority = 2)
+    @Test(invocationCount = 512, threadPoolSize = 2)
     public void testFindByBarcode() throws IOException {
-        try (InputStream is = query.findByBarcode("6900404523737");) {
+        try (InputStream is = query.findByBarcode("6900404523737")) {
             System.out.println(new String(is.readAllBytes(), StandardCharsets.UTF_8));
         }
-        try (InputStream is = query.findByBarcode("6939006488885");) {
+        try (InputStream is = query.findByBarcode("6939006488885")) {
             System.out.println(new String(is.readAllBytes(), StandardCharsets.UTF_8));
         }
-        try (InputStream is = query.findByBarcode("6940188805018");) {
+        try (InputStream is = query.findByBarcode("6940188805018")) {
             System.out.println(new String(is.readAllBytes(), StandardCharsets.UTF_8));
         }
-
         try (InputStream is = query.findByBarcode("690158611081"); InputStream is1 = query.findByBarcode("dsgf");
-             InputStream is2 = query.findByBarcode(""); InputStream is3 = query.findByBarcode(null);) {
+             InputStream is2 = query.findByBarcode(""); InputStream is3 = query.findByBarcode(null)) {
             Assert.fail("Expected exception but none thrown!"); // 未抛出异常时失败
         } catch (IllegalArgumentException e) {
             // 验证异常信息
@@ -163,25 +153,21 @@ public class ESItemQueryTest {
         }
     }
 
-    @Test(invocationCount = 512, threadPoolSize = 2, priority = 2)
+    @Test(invocationCount = 512, threadPoolSize = 1)
     public void testFindByBarcodeAsync() throws InterruptedException {
         System.out.println("➡️ Started on thread: " + Thread.currentThread().getName());
         StringBuilder result = new StringBuilder();
         String[] barcodes = {"6900404523737", "6939006488885", "69401888050182"};
         // Java 21+
-        CompletableFuture<Void>[] futures = new CompletableFuture[barcodes.length];
+        CompletableFuture[] futures = new CompletableFuture[barcodes.length];
         var latch = new java.util.concurrent.CountDownLatch(1);
         for (int i = 0; i < barcodes.length; i++) {
             final String barcode = barcodes[i];
             futures[i] = CompletableFuture.runAsync(() -> {
                 Flux<ByteBuf> flux = query.findByBarcodeAsync(barcode);
                 flux.doOnComplete(latch::countDown).subscribe(
-                        byteBuf -> {
-                            result.append(byteBuf.toString(StandardCharsets.UTF_8));
-                        }, error -> {
-                            System.err.println("[ barcode=" + barcode + "] Error: " + error.getMessage());
-
-                        }, () -> {
+                        byteBuf -> result.append(byteBuf.toString(StandardCharsets.UTF_8)),
+                        error -> System.err.println("[ barcode=" + barcode + "] Error: " + error.getMessage()), () -> {
                             System.out.println("[barCODE=" + barcode + "] Completed.");
                             System.out.println(result);
                         });
@@ -190,7 +176,7 @@ public class ESItemQueryTest {
         latch.await();
     }
 
-    @Test(invocationCount = 128, threadPoolSize = 2, priority = 2)
+    @Test(invocationCount = 128, threadPoolSize = 2)
     public void testSearch() throws IOException {
         InputStream is = query.search(100, 30);
         System.out.println(new String(is.readAllBytes(), StandardCharsets.UTF_8));
@@ -233,7 +219,7 @@ public class ESItemQueryTest {
             StringBuilder sb = new StringBuilder();
             final int queryIndex = i;
             new Thread(() -> {
-                System.out.println("[Thread-" + Thread.currentThread().getId() + "] Starting query #" + queryIndex);
+                System.out.println("[Thread-" + Thread.currentThread().threadId() + "] Starting query #" + queryIndex);
                 fluxes[queryIndex].subscribe(
                         byteBuf -> {
                             try {
@@ -243,23 +229,22 @@ public class ESItemQueryTest {
                             }
                         },
                         error -> {
-                            System.err.println("[Thread-" + Thread.currentThread().getId() + "] Error: " + error.getMessage());
+                            System.err.println("[Thread-" + Thread.currentThread().threadId() + "] Error: " + error.getMessage());
                             error.printStackTrace();
                         },
                         () -> {
-                            System.out.println("[Thread-" + Thread.currentThread().getId() + "] Query #" + queryIndex + " completed");
+                            System.out.println("[Thread-" + Thread.currentThread().threadId() + "] Query #" + queryIndex + " completed");
                             System.out.println(sb);
                             latch.countDown();
                         }
                 );
             }).start();
         }
-
         // 等待所有查询完成（30秒超时）
         latch.await();
     }
 
-    @Test(invocationCount = 256, threadPoolSize = 2, priority = 2)
+    @Test(invocationCount = 256, threadPoolSize = 1)
     public void testSearchAfter() throws IOException {
         InputStream is = query.search(50, "471019908050", SortFieldEnum.BARCODE);
         System.out.println(new String(is.readAllBytes(), StandardCharsets.UTF_8));
@@ -282,8 +267,9 @@ public class ESItemQueryTest {
         // 创建所有查询（不立即执行）
         Flux<ByteBuf>[] fluxes = new Flux[]{
                 query.searchAsync(50, "471019908050", SortFieldEnum.BARCODE),
+                query.searchAsync(100, SortFieldEnum.BARCODE),
                 query.searchAsync(new ItemQueryFilter[]{new CategoryFilter(49681151224315522L)}, 50),
-                query.searchAsync(new ItemQueryFilter[]{new KeywordFilter("693"), new CategoryFilter(49680933986631205L)}, 1, null, SortFieldEnum._BARCODE),
+                query.searchAsync(new ItemQueryFilter[]{new KeywordFilter("693"), new CategoryFilter(49680933986631205L)}, 20, null, SortFieldEnum._BARCODE),
                 query.searchAsync(new ItemQueryFilter[]{new KeywordFilter("6932"), new CategoryFilter(49680933986631205L)}, 50),
                 query.searchAsync(new ItemQueryFilter[]{new KeywordFilter("692"), new CategoryFilter(new long[]{49680944612900409L}), new RetailPriceFilter(2.6, 25.5), new LastReceiptPriceFilter(1.1, 3)}, 5, null, SortFieldEnum._ID),
                 query.searchAsync(new ItemQueryFilter[]{new KeywordFilter("伊利"), new KeywordFilter("690")}, 10, "258", SortFieldEnum._RETAIL_PRICE)
@@ -295,7 +281,7 @@ public class ESItemQueryTest {
             StringBuilder sb = new StringBuilder();
             final int queryIndex = i;
             new Thread(() -> {
-                System.out.println("[Thread-" + Thread.currentThread().getId() + "] Starting query #" + queryIndex);
+                System.out.println("[Thread-" + Thread.currentThread().threadId() + "] Starting query #" + queryIndex);
 
                 fluxes[queryIndex].subscribe(
                         byteBuf -> {
@@ -306,11 +292,11 @@ public class ESItemQueryTest {
                             }
                         },
                         error -> {
-                            System.err.println("[Thread-" + Thread.currentThread().getId() + "] Error: " + error.getMessage());
+                            System.err.println("[Thread-" + Thread.currentThread().threadId() + "] Error: " + error.getMessage());
                             error.printStackTrace();
                         },
                         () -> {
-                            System.out.println("[Thread-" + Thread.currentThread().getId() + "] Query #" + queryIndex + " completed");
+                            System.out.println("[Thread-" + Thread.currentThread().threadId() + "] Query #" + queryIndex + " completed");
                             System.out.println(sb);
                             latch.countDown();
                         }
@@ -319,6 +305,6 @@ public class ESItemQueryTest {
         }
 
         // 等待所有查询完成（30秒超时）
-        boolean completed = latch.await(30, TimeUnit.SECONDS);
+         latch.await(30, TimeUnit.SECONDS);
     }
 }
